--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-osmpbfreader = "0.16.1"
+gtfs-structures = "0.41.3"
 rand = "0.8.5"
