--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+geo = "0.28.0"
 gtfs-structures = "0.41.3"
+osmpbfreader = "0.16.1"
 rand = "0.8.5"
