--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 arguments = "0.7.2"
+bincode = "1.3.3"
 geo = "0.28.0"
 gtfs-structures = "0.41.3"
 osmpbfreader = "0.16.1"
 rand = "0.8.5"
 rstar = "0.12.0"
+serde = { version = "1.0.210", features = ["derive"] }
