--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arguments = "0.7.2"
+arguments = "0.8.0"
 bincode = "1.3.3"
-geo = "0.28.0"
-gtfs-structures = "0.41.3"
+geo = {version = "0.29.2", features = ["serde"]}
+gtfs-structures = "0.42.0"
 osmpbfreader = "0.16.1"
 rand = "0.8.5"
-rstar = "0.12.0"
-serde = { version = "1.0.210", features = ["derive"] }
+rstar = "0.12.2"
+serde = {version = "1.0.215", features = ["derive"]}
