--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 [dependencies]
 arguments = "0.8.0"
 bincode = "1.3.3"
-geo = {version = "0.29.2", feature = ["serde"]}
+geo = { version = "0.29.2", features = ["serde", "use-serde"] }
 gtfs-structures = "0.42.0"
 osmpbfreader = "0.16.1"
 rand = "0.8.5"
 rstar = "0.12.2"
-serde = {version = "1.0.215", feature = ["derive"]}
+serde = { version = "1.0.215", features = ["derive"] }
