--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ osmpbfreader = "0.16.1"
 rand = "0.8.5"
 rstar = "0.12.2"
 serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+serde_with = "3.11.0"
