--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 arguments = "0.8.0"
 bincode = "1.3.3"
+chrono = "0.4.39"
 geo = { version = "0.29.2", features = ["serde", "use-serde"] }
 gtfs-structures = "0.42.0"
 osmpbfreader = "0.16.1"
