--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ rstar = "0.12.2"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 serde_with = "3.11.0"
+
+[profile.release]
+debug = true
