--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bincode = "1.3.3"
 chrono = "0.4.39"
 geo = { version = "0.29.2", features = ["serde", "use-serde"] }
 gtfs-structures = "0.42.0"
+ittapi = "0.4.0"
 osmpbfreader = "0.16.1"
 rand = "0.8.5"
 rstar = "0.12.2"
