--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rstar = "0.12.2"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 serde_with = "3.11.0"
+tokio = "1.42.0"
 
 [profile.release]
 debug = true
