--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,16 @@ edition = "2021"
 arguments = "0.8.0"
 bincode = "1.3.3"
 chrono = "0.4.39"
-geo = { version = "0.29.2", features = ["serde", "use-serde"] }
+geo = { version = "0.29.3", features = ["serde", "use-serde"] }
 gtfs-structures = "0.42.0"
 ittapi = "0.4.0"
-osmpbfreader = "0.16.1"
+osmpbfreader = "0.17.0"
 rand = "0.8.5"
 rstar = "0.12.2"
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.133"
-serde_with = "3.11.0"
-tokio = "1.42.0"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.134"
+serde_with = "3.12.0"
+tokio = { version = "1.42.0", features = ["full"] }
 
 [profile.release]
 debug = true
