--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,8 @@ serde_json = "1.0.140"
 serde_with = "3.12.0"
 tokio = { version = "1.42.0", features = ["full"] }
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.6"
+
 [profile.release]
 debug = true
