--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "routing"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,15 +9,15 @@ edition = "2021"
 arguments = "0.8.0"
 bincode = "2.0.0"
 chrono = "0.4.40"
-clap = { version = "4.5.31", features = ["derive"] }
-geo = { version = "0.30.0", features = ["serde", "use-serde"] }
-gtfs-structures = "0.44.0"
+#clap = { version = "4.5.31", features = ["derive"] }
+geo = { version = "0.31.0", features = ["serde", "use-serde"] }
+gtfs-structures = "0.45.1"
 ittapi = "0.4.0"
 osmpbfreader = "0.19.1"
 rand = "0.9.0"
 rstar = "0.12.2"
 serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.140"
+serde_json = "1.0.145"
 serde_with = "3.12.0"
 tokio = { version = "1.42.0", features = ["full"] }
 
