--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ gtfs-structures = "0.45.1"
 ittapi = "0.4.0"
 osmpbfreader = "0.19.1"
 rand = "0.9.0"
+regex = "1.11.3"
 rstar = "0.12.2"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.145"
@@ -26,3 +27,8 @@ tikv-jemallocator = "0.6"
 
 [profile.release]
 debug = true
+
+[[bin]]
+name = "test"
+path = "src/test.rs"
+
