--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ ittapi = "0.4.0"
 osmpbfreader = "0.19.1"
 rand = "0.9.0"
 regex = "1.11.3"
+ron = "0.11.0"
 rstar = "0.12.2"
 serde = { version = "1.0.218", features = ["derive"] }
-serde_json = "1.0.145"
 serde_with = "3.12.0"
 tokio = { version = "1.42.0", features = ["full"] }
 
