--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,17 @@ edition = "2024"
 [dependencies]
 bincode = "2.0.0"
 chrono = "0.4.40"
+clap = { version = "*", features = ["derive"] }
 geo = { version = "0.31.0", features = ["serde", "use-serde"] }
-gtfs-structures = "0.45.1"
+gtfs-structures = "*"
 ittapi = "0.4.0"
 osmpbfreader = "0.19.1"
 rand = "0.9.0"
-regex = "1.11.3"
+regex = "*"
 ron = "0.11.0"
 rstar = "0.12.2"
 serde = { version = "1.0.218", features = ["derive"] }
-tokio = { version = "1.42.0", features = ["full"] }
+tokio = { version = "1.48.0", features = ["full"] }
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.6"
